# Adversary_DRONE

./: .gitignore  LICENSE  README.md  README.txt
Detect_Drone/: README.md  SCRIPTS_DOCUMENTATION.md  cube_to_pi.py  detect_test.py  detect_test_attitude_jetty.py  detect_test_attitude_jetty_flight.py  detect_test_jetty.py  detect_test_threads.py  detect_test_threads2.py  detect_test_velocity_2_fromchat.py  requirements.txt  ssh_feed.py  ssh_yolo_feed.py  ssh_yolo_feed_laptop.py  test_velocity.py  velocity_test2.py
Detect_Drone/archive/: detect.py  detect_test.py  detect_test_attitude.py  detect_test_velocity.py  detect_yolov4tiny.py  ssh_feed.py  velocity_test.py  velocity_test2.py
Detect_Drone/utils/: datasets.py
Lidar (archive)/: L1_lidar_usb.py  USB_SSH_GUIDE.md
Lidar (archive)/archive/: L1_lidar_GUI_client.py
Lidar_Lab/: L1_lidar.py  L1_lidar_GUI.py  L1_lidar_GUI_tunnel.py  L1_lidar_web_viz.py  L2_vector.py  lidar_driving.py
slam/: CUSTOMIZE.md  SETUP.md
slam/src/sick_tim_usb_ros2/: package.xml
slam/src/sick_tim_usb_ros2/launch/: usb_lidar.launch.py
slam/src/sick_tim_usb_ros2/sick_tim_usb_ros2/: L1_lidar_usb.py  usb_lidar_node.py
slam/src/slam_config/: README.md  package.xml
slam/src/slam_config/config/: cartographer_2d_lidar.lua
slam/src/slam_config/launch/: cartographer_usb.launch.py
slam/src/slam_config/rviz/: slam_tim561.rviz
slam_ws/: CARTOGRAPHER_PARAMS_GUIDE.md  CODE_LOCATIONS.md  REBUILD_ARTIFACTS.md  USB_SLAM_GUIDE.md  WEB_VISUALIZATION_GUIDE.md  clean_restart.sh  lidar_web_viz.py  rosboard_lidar_publisher.py  rosboard_lidar_viz.html  run_cartographer_log.sh  run_rosboard_sudo.sh  run_rviz.sh  run_slam.sh
slam_ws (archive)/: .gitignore  CARTOGRAPHER_GUIDE.md  DO_NOT_USE_SLAM_TOOLBOX.txt  NODES_AND_TOPICS.md  QUICK_START.md  USB_SLAM_GUIDE.md.bak  analyze_cartographer_log.sh  kill_all_slam.sh  lidar_scan_viewer.py  rosbridge_params.yaml  run_cartographer.sh  run_rosboard_sudo.sh  run_web_viz.sh  save_map.sh  start_web_slam.sh  verify_slam.sh
slam_ws (archive)/scripts/: bootstrap_build.sh  setup_x11_forwarding.sh
slam_ws (archive)/src/sick_tim_usb_ros2/: setup.cfg  setup.py
slam_ws (archive)/src/slam_config/: CMakeLists.txt  package.xml
slam_ws (archive)/src/slam_config/config/: cartographer_2d_lidar.lua  mapper_params_online_async.yaml
slam_ws (archive)/src/slam_config/launch/: cartographer_usb.launch.py  slam_tim561.launch.py  slam_usb.launch.py
slam_ws/src/sick_tim_usb_ros2/: package.xml  setup.py
slam_ws/src/sick_tim_usb_ros2/sick_tim_usb_ros2/: L1_lidar_usb.py  usb_lidar_node.py
slam_ws/src/slam_config/: README.md
yolo4/yolov4-ncnn/: YoloV4.depend  YoloV4.layout  yolov4.cpp
yolov4tiny/: README.txt  img.py  test.py  test_headless.py  test_web.py  yolov4-tiny-custom.cfg
(+8 files in other folders)
