<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam_config</name>
  <version>1.0.0</version>
  <description>Configuration and launch files for 2D SLAM using Cartographer with a SICK TiM series LiDAR on ROS 2 Humble.</description>
  <maintainer email="your_email@example.com">Eagle Eye Engineering</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies used by the launch and configs -->
  <exec_depend>cartographer_ros</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- LiDAR publisher used by the launch; replace with your driver if different -->
  <exec_depend>sick_tim_usb_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
